--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,10 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 
+html::-webkit-scrollbar {
+	width:4px !important; 
+	
+  }
 
 
 html, body, div, span, applet, object,
